--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,13 +52,16 @@ div.topBar{
     font-weight: 700;
 }
 
-div.par1{
+div.hero-section{
     margin-top: calc(100%-100px);
     height: 600px;
     justify-content: space-around;
+    height: 100vh;
     width: 100%;
     display: flex;
     background-image: url('../assets/mentalHealth2.jpg');
+    background-size: cover;
+    background-position: center;
 }
 
 div.par1 p{
@@ -68,6 +71,10 @@ div.par1 p{
     margin-top: 80px;
     text-align: center;
     margin-left: 30px;
+}
+
+div.parAbt{
+    background-color: #d6d7db;
 }
 
 div.parAbt h5{
@@ -254,7 +261,7 @@ footer p{
         width: auto;
     }
 }
-@media only screen and (max-width: 370px){
+@media only screen and (max-width: 720px){
        
     div.TheLogo h1{
         position: relative;
@@ -269,9 +276,10 @@ footer p{
     div.parAbt h5{
         font-size: 2em;
     }
-    div.par1{
+    div.hero-section{
         background-image: url('../assets/mentalHealth2.jpg');
-        background-size: 330px 410px;
+        background-size: cover;
+        background-position: center;
         height: 300px;
     }
     div.arcTitle p{
