--- a/styles/style.css
+++ b/styles/style.css
@@ -7,8 +7,12 @@
 
 /* lets start with mobile design first */
 
-section.cards {
-    /* background-color: red; */
+section.mhealth_conditions div.head{
+    text-align: center;
+    margin: 20px 0;
+}
+
+div.cards {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -18,13 +22,8 @@ section.cards {
 }
 
 div.card {
-    /* background-color: green; */
-    /* width: 350px; */
     width: 93%;
     min-width: 300px;
-    /* height: 300px; */
-
-    /* padding: 10px; */
 
     margin: 5px auto 15px;
     box-shadow: 0px 0px 5px rgb(0, 0, 0, 0.6);
@@ -33,8 +32,6 @@ div.card {
 
     display: flex;
     flex-direction: column;
-    /* transition: 5s ease-in; */
-    /* overflow: scroll; */
 }
 
 div.img {
@@ -72,24 +69,11 @@ div.link a:hover {
 }
 
 section.cards-add-none {
-    /* background-color: blue; */
-    /* display: flex; */
     display: none;
 }
 
-/* section.cards-add::after{
-    transition: 1s ease-in;
-} */
-
-section.cards-add {
-    /* transition: 1s ease-in; */
-    display: flex;
-}
-
 div.prologue {
-    /* background-color: blue; */
     width: 95%;
-    /* padding: 20px; */
     margin: 30px auto 20px;
 
     display: flex;
@@ -100,16 +84,13 @@ div.prologue {
 
 div.prologue p {
     padding: 20px;
+    text-align: center;
 }
 
-div.prologue button {
-    width: 150px;
-    height: 30px;
-}
 
 @media screen and (min-width: 720px) {
 
-    section.cards {
+    div.cards {
         flex-direction: row;
         flex-wrap: wrap;
         width: 90%;
