--- a/styles/style.css
+++ b/styles/style.css
@@ -36,8 +36,23 @@ div.card {
 
 div.img {
     background-color: red;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     width: 100%;
     height: 250px;
+}
+
+div.img1{
+    background-image: url('');
+}
+
+div.img2{
+    background-image: url('');
+}
+
+div.img3{
+    background-image: url('');
 }
 
 div.content {
