--- a/styles/style.css
+++ b/styles/style.css
@@ -39,9 +39,39 @@ div.card {
 
 div.img {
     background-color: red;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     width: 100%;
     height: 250px;
 }
+
+div.img1{
+    background-image: url('');
+}
+
+div.img2{
+    background-image: url('');
+}
+
+div.img3{
+    background-image: url('');
+}
+
+div.img4{
+    background-image: url('');
+}
+
+div.img5{
+    background-image: url('');
+}
+
+div.img6{
+    background-image: url('');
+}
+
+
+
 
 div.content {
     padding-top: .4em;
