Monday 19 June 2023 Addition of images.

--- a/styles/style.css
+++ b/styles/style.css
@@ -47,27 +47,27 @@ div.img {
 }
 
 div.img1{
-    background-image: url('');
+    background-image: url('../assets/Sleeping-cat.jpg');
 }
 
 div.img2{
-    background-image: url('');
+    background-image: url('../assets/Social-media.jpg');
 }
 
 div.img3{
-    background-image: url('');
+    background-image: url('../assets/Relationships-1.jpg');
 }
 
 div.img4{
-    background-image: url('');
+    background-image: url('../assets/Exercise-1.jpg');
 }
 
 div.img5{
-    background-image: url('');
+    background-image: url('../assets/Nutrients.jpg');
 }
 
 div.img6{
-    background-image: url('');
+    background-image: url('../assets/Easy-1.jpg');
 }
 
 
