added mwambapa's section with css, working v1

--- a/styles/style.css
+++ b/styles/style.css
@@ -232,3 +232,11 @@ section.what_is_mhealth div.subs div.sub-right ul{
 
 }
 /* WHAT IS MENTAL HEALTH END  */
+
+
+
+
+
+
+
+/* MENTAL HEALTH CONDITIONS START */
