--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,21 @@
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caprasimo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Diphylleia&display=swap');
+/*General*/
+
+
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 
 body {
@@ -42,25 +56,34 @@ body {
 }
 
 .hero-section h1 {
+    font-family: 'Poppins';
     font-size: 3rem;
+    font-weight: 700;
     margin-bottom: 1rem;
     color: white;
 }
 
 .hero-section p {
+    font-family: 'Diphylleia';
     font-size: 1.5rem;
     margin-bottom: 2rem;
     color: white;
 }
 
 .hero-section .btn {
+    font-family: 'Roboto';
+    font-weight: bold;
     font-size: 1.2rem;
 }
+
+
 
 .section {
     position: relative;
     height: 100vh;
 }
+
+
 
 .section-content {
     position: relative;
@@ -69,6 +92,7 @@ body {
 
 .navbar {
     background-color: white;
+    height: 50px;
     /* border-bottom: 1px solid #ddd; */
     /* padding: 10px 20px; */
     position: fixed;
@@ -92,8 +116,9 @@ body {
 }
 
 .navbar .navbar-brand {
+    font-family: 'Dancing Script';
     font-size: 1.5rem;
-    font-weight: bold;
+    font-weight: 700;
 }
 
 .navbar-toggler {
@@ -131,6 +156,7 @@ body {
 }
 
 .navbar .navbar-nav .nav-link {
+    font-family: 'Noto Sans';
     color: black;
     font-size: 1rem;
     margin-left: 20px;
@@ -178,9 +204,18 @@ section.what_is_mhealth{
 
 section.what_is_mhealth div.head{
     text-align: center;
+    font-family: 'Roboto';
+}
+
+section.what_is_mhealth div.head h2{
+    font-size: 1.3em;
+    font-weight: bold;
 }
 
 section.what_is_mhealth h4.title{
+    font-family: 'Poppins';
+    font-weight: bold;
+    font-size: 1em;
     margin-bottom: 5px;
 }
 
@@ -190,6 +225,7 @@ p,ul{
 }
 
 section.what_is_mhealth div.main-content{
+    font-family: 'Roboto';
     padding: 15px;
 }
 
@@ -274,7 +310,8 @@ section.mhealth_conditions{
 
 section.mhealth_conditions div.head{
     text-align: center;
-    margin: 20px 0;
+    margin: 20px 0 40px;
+    font-family: 'Lobster';
 }
 
 section.mhealth_conditions div.cards {
@@ -289,7 +326,6 @@ section.mhealth_conditions div.cards {
 section.mhealth_conditions div.cards div.card {
     width: 93%;
     min-width: 300px;
-
     margin: 5px auto 15px;
     box-shadow: 0px 0px 5px rgb(0, 0, 0, 0.6);
     border-radius: .3em;
