--- a/styles/style.css
+++ b/styles/style.css
@@ -344,6 +344,7 @@ section.mhealth_conditions div.cards div.card div.img {
     background-repeat: no-repeat;
     width: 100%;
     height: 250px;
+    margin-bottom: 0;
 }
 
 section.mhealth_conditions div.cards div.card div.img1{
@@ -366,6 +367,11 @@ section.mhealth_conditions div.cards div.card div.content {
 
 section.mhealth_conditions div.cards div.card div.content p.title{
     color: red;
+    font-family: 'Poppins';
+    font-size: 1em;
+    font-weight: bold;
+    margin: 0 0 0;
+    color: black;
     
 }
 
