--- a/about_us/styles/styles.css
+++ b/about_us/styles/styles.css
@@ -4,6 +4,83 @@
     margin: 0;
 }
 
+.navbar {
+    background-color: white;
+    height: 50px;
+    /* border-bottom: 1px solid #ddd; */
+    /* padding: 10px 20px; */
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+    transition: opacity 0.3s ease;
+}
+
+.hero-navbar {
+    /* Add your desired styles for the navbar on the hero-section page */
+    background-color: transparent;
+    color: white;
+  }
+  
+
+.navbar.hidden {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.navbar .navbar-brand {
+    font-family: 'Dancing Script';
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.navbar-toggler {
+    display: block;
+    cursor: pointer;
+    /* padding: 10px; */
+    background-color: transparent;
+    border: none;
+    z-index: 1;
+}
+
+.navbar-toggler span {
+    display: block;
+    width: 25px;
+    height: 3px;
+    background-color: #333333;
+    margin-bottom: 5px;
+    transition: transform 0.3s ease;
+}
+
+.navbar-toggler.open span:nth-child(1) {
+    transform: translateY(6px) rotate(45deg);
+}
+
+.navbar-toggler.open span:nth-child(2) {
+    opacity: 0;
+}
+
+.navbar-toggler.open span:nth-child(3) {
+    transform: translateY(-6px) rotate(-45deg);
+}
+
+.navbar .navbar-nav {
+    margin-left: auto;
+}
+
+.navbar .navbar-nav .nav-link {
+    font-family: 'Noto Sans';
+    color: black;
+    font-size: 1rem;
+    margin-left: 20px;
+}
+
+.navbar .navbar-nav .nav-link:hover {
+    color: #555;
+}
+
+
 div.hero-section{
     height: 100vh;
     width: 100vw;
@@ -200,11 +277,12 @@ div.arc2{
 
 footer{
     background-color: black;
-    height: 20vh;
+    height: 10vh;
     color: white;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-content: center;
+    text-align: center;
 }
 
 
