--- a/styles/style.css
+++ b/styles/style.css
@@ -479,7 +479,7 @@ section.cards div.card {
     /* width: 350px; */
     width: 93%;
     min-width: 300px;
-    /* height: 300px; */
+    height: 500px;
 
     /* padding: 10px; */
 
